--- a/back/src/ProEventos.API/ProEventos.API/appsettings.Development.json
+++ b/back/src/ProEventos.API/ProEventos.API/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "Default": "Data Source = ProEventos.db"
   }
 }
