--- a/back/src/ProEventos.Application/ProEventos.Application.csproj
+++ b/back/src/ProEventos.Application/ProEventos.Application.csproj
@@ -11,4 +11,8 @@
       <ProjectReference Include="..\ProEventos.Persistence\ProEventos.Persistence\ProEventos.Persistence.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Compile Remove="Class1.cs" />
+    </ItemGroup>
+
 </Project>
