--- a/back/src/ProEventos.Persistence/ProEventos.Persistence/ProEventos.Persistence.csproj
+++ b/back/src/ProEventos.Persistence/ProEventos.Persistence/ProEventos.Persistence.csproj
@@ -10,4 +10,12 @@
       <ProjectReference Include="..\..\ProEventos.Domain\ProEventos.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Compile Remove="Class1.cs" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.8" />
+    </ItemGroup>
+
 </Project>
